# MetalSandBox

./: .gitignore  CMakeLists.txt  README.md
inc/: MetalReference.h  MyAppDelegate.h  MyMTKViewDelegate.h  Renderer.h
metal-cmake/metal-cpp-extensions/AppKit/: AppKitPrivate.hpp  NSWindow.hpp
src/: MyAppDelegate.cpp  MyMTKViewDelegate.cpp  Renderer.cpp  main.cpp
